# ReceiptInject

./: .env.example  .gitignore  Makefile  README.md  benchmark_spec.md  dataset_card.md  pyproject.toml  requirements.txt  research_memo.md  responsible_use.md
configs/: cheap_mistral_test.yaml  default.yaml  evalgrid_gemini_300_baseline.yaml  evalgrid_gemini_300_safety_schema.yaml  evalgrid_gemini_300_trusted_gating.todo.yaml  evalgrid_gemini_300_trusted_gating.yaml  evalgrid_mistral_300_baseline.yaml  evalgrid_mistral_300_safety_schema.yaml  evalgrid_mistral_300_trusted_gating.yaml  evalgrid_openai_300_baseline.yaml  evalgrid_openai_300_safety_schema.yaml  evalgrid_openai_300_trusted_gating.yaml  evalgrid_receiptinject_gemini.yaml  evalgrid_receiptinject_mistral.yaml  evalgrid_receiptinject_mistral_hard_baseline.yaml  evalgrid_receiptinject_mistral_hard_combined.yaml  evalgrid_receiptinject_mock.yaml  evalgrid_receiptinject_openai.yaml  gemini_300_benchmark.yaml  gemini_smoke.yaml  mock_full_run.yaml  ocr_mistral_test.yaml
data/: dev_subset_50.jsonl  eval_subset_100.jsonl  examples_300.jsonl  hard_test_subset_50.jsonl  test_subset_50.jsonl
docs/: ReceiptInject_Report.md
evalgrid/: __init__.py  benchmark.py  cache.py  cli.py  config.py  cost_tracker.py  providers.py  rate_limit.py  runner.py  schemas.py  storage.py
paper/: ReceiptInject_Report.md
receiptinject/: __init__.py  agent_schemas.py  analysis.py  dataset_generator.py  document_templates.py  eval_harness.py  failure_cases.py  model_clients.py  ocr_client.py  prompts.py  render_documents.py  schemas.py  (+3 more)
(+88 files in other folders)
