[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "receiptinject"
version = "0.1.0"
description = "Scalable evaluation infrastructure for document-understanding agents on untrusted synthetic receipts."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ReceiptInject Contributors" }
]
dependencies = [
  "pydantic",
  "pandas",
  "python-dotenv",
  "tqdm",
  "pyyaml",
  "mistralai",
  "openai",
  "reportlab",
  "pillow",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools.packages.find]
include = ["receiptinject*", "evalgrid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["paws"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
